# proposal-draft-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend/: graph.py  main.py
backend/core/: config.py  db.py
backend/models/: db_models.py  schemas.py
backend/routers/: api.py  ui.py
backend/templates/: base.html  detail.html  index.html
backend/templates/fragments/: proposal_list.html  status.html
backend/workers/: worker.py
static/css/: input.css  output.css
tests/: test_graph.py  test_smoke.py
