[project]
name = "proposal-draft-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "arq>=0.28.0",
    "fastapi>=0.137.2",
    "jinja2>=3.1.6",
    "langchain-core>=1.4.7",
    "langchain-openai>=1.3.2",
    "langgraph>=1.2.5",
    "loguru>=0.7.3",
    "markdown>=3.10.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.32",
    "redis[hiredis]>=5.3.1",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
